# velo

./: .gitignore  CHANGELOG.md  PLAN.md  README.md  index.html  package.json  tsconfig.json
.github/workflows/: ci.yml  platform-release-check.yml  site-compatibility-check.yml
docs/: architecture.md  product.md  site-compatibility.md
scripts/: bundle-config.test.ts  deno-download.ts  deno-manifest.test.ts  deno-manifest.ts  engine-download.ts  engine-manifest.test.ts  engine-manifest.ts  engine-paths.ts  ffmpeg-download.ts  ffmpeg-manifest.test.ts  ffmpeg-manifest.ts  install-engine.ts  prepare-sidecar.ts  security-config.test.ts  verify-engine.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: THIRD_PARTY_NOTICES.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/application/: download_media.rs  inspect_media.rs  mod.rs
src-tauri/src/commands/: download.rs  media.rs  mod.rs  settings.rs  thumbnail.rs
src-tauri/src/domain/: download.rs  media.rs  mod.rs
src-tauri/src/infrastructure/: mock_media_engine.rs  mod.rs  process_runner.rs  representative_frame.rs  thumbnail_fetcher.rs  yt_dlp_downloader.rs  yt_dlp_engine.rs  yt_dlp_options.rs
src-tauri/tests/fixtures/: yt_dlp_single_video.json
src/components/: BrandMark.tsx
src/features/downloads/: MediaInspector.tsx  inspection-generation.test.ts  inspection-generation.ts  task-scheduler.test.ts  task-scheduler.ts
src/lib/: media.ts  url.test.ts  url.ts  velo-api.test.ts  velo-api.ts
(+5 files in other folders)
