[package]
name = "velo"
version = "0.1.0"
description = "Velo / 微落 desktop video companion"
edition = "2024"
rust-version = "1.85"

[lib]
name = "velo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tokio = { version = "1.52.3", features = ["io-util", "macros", "process", "rt", "sync", "time"] }
url = "2"
