[package]
name = "velo"
version = "0.1.0"
description = "Velo / 微落 desktop video companion"
edition = "2024"
rust-version = "1.85"

[lib]
name = "velo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "process", "rt", "sync", "time"] }
url = "2"
